--- a/гост книга/Views/Account/Login.cshtml
+++ b/гост книга/Views/Account/Login.cshtml
@@ -1,13 +1,26 @@
-﻿<h2>Вход</h2>
+﻿<div class="container mt-5">
+    <div class="col-md-4 mx-auto">
+        <h3 class="text-center mb-4">Вход</h3>
 
-<form method="post">
-    Логин: <input name="login"><br>
-    Пароль: <input type="password" name="password"><br><br>
+        <form method="post">
+            <div class="mb-3">
+                <label class="form-label">Логин</label>
+                <input name="login" class="form-control" />
+            </div>
 
-    <button type="submit">Войти</button>
-    <a href="/Account/Registration">Регистрация</a>
-    <a href="/Account/Guest">Войти как гость</a>
+            <div class="mb-3">
+                <label class="form-label">Пароль</label>
+                <input name="password" type="password" class="form-control" />
+            </div>
 
-    <p style="color:red">@ViewBag.Error</p>
-</form>
+            <button class="btn btn-success w-100 mb-2">Войти</button>
+
+            <a class="btn btn-secondary w-100 mb-2" href="/Account/Registration">Регистрация</a>
+            <a class="btn btn-outline-primary w-100" href="/Account/Guest">Войти как гость</a>
+
+            <p class="text-danger text-center mt-2">@ViewBag.Error</p>
+        </form>
+    </div>
+</div>
+
 
